ingnum/PHPService-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-service
  name: php-service
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: php-service
  type: LoadBalancer
