ingnum/PHPService-service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  ports:
    - nodePort: 31280
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: php-service
  type: NodePort
